--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                             <span class="winamp-duration" id="winamp-duration">00:00</span>
                         </div>
                         <div class="winamp-ticker">
-                            <span class="radio-track-name">Alex's Radio - Winamp 2.91</span>
+                            <span class="radio-track-name" data-i18n="sidebar_radio_title">Your Radio</span> - Winamp 2.91
                         </div>
                         <div class="winamp-viz" id="winamp-viz"></div>
                         <div class="winamp-info">
@@ -166,7 +166,7 @@
                         <span class="terminal-tbtn terminal-tbtn-min"></span>
                         <span class="terminal-tbtn terminal-tbtn-max"></span>
                     </div>
-                    <span class="terminal-titlebar-text">alex@mtl:~</span>
+                    <span class="terminal-titlebar-text">user@host:~</span>
                 </div>
                 <div class="terminal-body">
                     <div class="terminal-line"><span class="terminal-prompt">$</span> <span
