--- a/edit.html
+++ b/edit.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>EDIT ITEM - ALEX-CONTROL-PANEL V1.0</title>
+    <title data-i18n="edit_title">EDIT ITEM - CONTROL-PANEL V1.0</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="admin.css">
     <link rel="stylesheet" href="fonts.css">
