--- a/index.html
+++ b/index.html
@@ -46,11 +46,8 @@
                 <button class="settings-btn">⚙</button>
                 <div class="settings-dropdown">
                     <div class="settings-section-label">Effects</div>
-                    <div class="settings-option" onclick="toggleGlitterText()">
-                        <span id="glitter-indicator">✨</span> Glitter Text
-                    </div>
-                    <div class="settings-option" onclick="toggle90sDecorations()">
-                        <span id="decorations-indicator">🎨</span> 90s Decorations
+                    <div class="settings-option" onclick="togglePartyMode()">
+                        <span id="party-mode-indicator">✨</span> Party Mode
                     </div>
                     <div class="settings-divider"></div>
                     <div class="settings-section-label">Theme</div>
